Fixed a bug that caused the backdrop filter for the nav not to change as intended on IPhone.

--- a/src/base.css
+++ b/src/base.css
@@ -245,6 +245,7 @@ nav::before {
 @media screen and (max-width: 500px) {
     nav {
         backdrop-filter: none;
+        -webkit-backdrop-filter: none;
         display: flex;
         bottom: 0;
         top: auto;
